--- a/index.html
+++ b/index.html
@@ -31,3 +31,6 @@ clientes potenciales o compradores. Se utiliza comúnmente en campañas de marke
 realizar una acción concreta, como registrarse, comprar un producto o descargar un recurso. Las landing pages se centran
 en un solo producto o servicio y están diseñadas para minimizar distracciones, guiando al usuario hacia la acción
 deseada. --> 
+<!--eata es una loanding page porque esta siendo utilizada para que clientes que quieran ver el labron de perro en cine esta 
+landing page facita al usuario con la commpra sus entradas del cines y le da mas facilidad para escoger un horario cantidad de asistos
+solo poninedo su nombre, correo, horario, asientos, y un codigo para que recoga sus entradas.---!->a
